<resources>
    <string name="app_name">MySoftShop</string>
    <string name="show_details">Show details</string>
    <string name="just_text">Бұл текст</string>
    <string name="just_button">Бұл батырма</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_description">This is description</string>
    <string name="title">Title</string>
    <string name="v">V</string>
    <string name="buy">buy</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="myAccount">Менің аккауынтым</string>
    <string name="Settings">Параметрлері</string>
    <string name="favorite">Сүйікті өнім</string>
    <string name="aboutUs">Біз туралы</string>
    <string name="support">Көмек</string>
    <string name="title_activity_product_img">ProductImgActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_in">Кіру</string>
    <string name="sign_up">Жаңадан кіру</string>
    <string name="s_w_g">Google-мен жалғастыр</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="Category">Category</string>
    <string name="quanti_buy_product">Мөлшері</string>
    <string name="color">Түсі</string>
    <string name="white">Ақ</string>
    <string name="set_to_cart">Арбаға салу</string>
    <string name="im_user">Сыатыпалушысыз ба?</string>
    <string name="im_admin">Администраторсыз ба?</string>
    <string name="Canon_D3200">Canon D3200</string>
    <string name="product_name">Тауардың аты</string>
    <string name="Растау">Ok</string>
    <string name="deliver">Жеткізу қанша уақыт алады?</string>
    <string name="deliver2">Төлем ақы өткізу түрлері</string>
    <string name="return_buy">Қайтару мүмкіндігі бар ма?</string>
    <string name="ga">Кепілдік бар ма?</string>
    <string name="sale">Жаппай сатылымдар қашан?</string>
    <string name="softstore">SoftStore</string>
    <string name="ok">Растау</string>
    <string name="myCart">Мені дорбам</string>
    <string name="go_out">Шығу</string>
</resources>
