<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/quest_toolbar"
        android:background="@drawable/action_bar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/softstore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/deliver"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/deliver2"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:text="@string/return_buy"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:text="@string/ga"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/sale"/>

    </LinearLayout>

</LinearLayout>