<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5000dp"
        tools:layout_editor_absoluteY="252dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/midle"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/midle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/midle"
            app:hintTextAppearance="@style/TextAppearance.AppCompat"
            android:textColorHint="@android:color/darker_gray" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/midle"
                android:ems="10"
                android:hint="Parola"
                android:textColor="@color/midle"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/old_user"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/soft_button"
            android:text="@string/sign_in"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/google_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/gos_btn"
            android:textColor="@color/midle"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/s_w_g" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/midle"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>